11-13-2024
- added tcpdump and traceroute commands to all machines


11-11-2024
- remove wireguard server as its just easier to do it on the actual router. the configuration will still be present although unused
- isolate public keys into a file for ease of access throughout the config. (use "keys" special argument)
- remove zerotier from all machines in favor of wireguard (no reliance on random chinese or russian nodes)
- remove the security rule for nixos rebuild (I will be rewriting the theme switching thing in the future)


11-10-2024:
- keyd: remap caps lock to escape when tapped and meta when held instead of control
- new keybind layout for i3 using the new meta


11-07-2024:
- dunst will now display notifications in i3 when taking screenshots
- xdg.userDirs are now enabled by default
- refactored i3 setup: seperated config into seperate file.
- seperate scripts file for hyprland.
- cleanup omori-calendar-project service: seperate script file
- omori-calendar-project will now issue a warning if gnome is enabled at the same time


11-06-2024:
- removed game-container server in favor of alpine linux LXC containers instead
- reincluded the default kernel modules for servers after alot of pain where the OS couldn't mount the root drive due to missing modules


11-05-2024:
- polybar: 
add more mkDefault for more flexible configuration
change polybar default font size from 18 to 16
- i3lock:
now writes a script binary for the user's shell path instead of running a xdg config file.
binary called "i3lock" and will replace the default created by nixos option services.xserver.windowManager.i3.enable when run as a normal user
home-manager refactor:
  - rename minimal.nix to essentials.nix and is the default profile for home-manager. It contains many apps that are very useful and most profiles should import this