@@ -1,21 +1,0 @@
-private_key: ENC[AES256_GCM,data:A8ieUObT2uI2AxNgv+XyHFOFaOMzs5IfuphQm+Bfiilp+bUtjxZq09eAzTU=,iv:Or8e1KJrayX31MpovPmyP1h9UVv9S5XdgUT8ZFp5T3E=,tag:HFIp9+/RQANHWzeiQkYV8w==,type:str]
-sops:
-    kms: []
-    gcp_kms: []
-    azure_kv: []
-    hc_vault: []
-    age:
-        - recipient: age1sahmk7lptw9kkqwjrxy3npy8l742mnmq8428hf5tzahua0ny6euqr969la
-          enc: |
-            -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAvdzBoK2pMY3lNVzdOOUth
-            Wll4NDgzazBuVEgweXNWc2xoUHNEN1E3UEFBCmY3ZWdvVUdVTFFLcmFndWdqdzdY
-            bVdtTGp6bzYvVHptVm0vK2hzU09WV3MKLS0tIGpKV1ZvdUZjdUNMelEveFFjTjZF
-            UnVZMmdJLzJ4N0djWXZ1Y1o5Y0xHT3cKiRa9wUxEkCvzt9bHLzbJolD7vitOZ9Z/
-            3kaawCHIQuP3prp8loTtGZcGfWmxHnZKDu/kkkTV9sqRr8Q6OfQ58Q==
-            -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-11-08T14:46:54Z"
-    mac: ENC[AES256_GCM,data:a/ns9tY6jahd/OEWRNmniZG3kaPmzatSkLEVhEzuudzznkLu8KXusaf8f3ZCKdKl+bZCsG8sXWrxmxXYIBZGjZqfSX7tOtpASFDsP32cHF3FP1E+3p7NEdL3Imvs34/dk4sv/rHejOfla0oWPO3BSsiukaIea+m1foistKWWWVk=,iv:I0DK3Leax2GWNJijKORuDrauMYxH+02YvSgMKca6Zfs=,tag:SX7qJG9rvzzABIQ0sJ1blA==,type:str]
-    pgp: []
-    unencrypted_suffix: _unencrypted
-    version: 3.9.1
